# ChangeLog for sys-apps/portage
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Id$

*portage-2.2.01.18980 (17 Jul 2011)

  17 Jul 2011; Fabian Groffen <grobian@gentoo.org>
  -files/portage-2.2.00.13849-ebuildshell.patch,
  -files/portage-2.2.00.15842-configshell.patch,
  -files/portage-2.2.00.15842-shebangcheck.patch, -portage-2.2.01.18761.ebuild,
  +portage-2.2.01.18980.ebuild, +files/portage-2.2.01.18980-ebuildshell.patch:
  Version bump, matches portage-2.2.0_alpha45+, cleanup

*portage-2.2.01.18890 (01 Jul 2011)

  01 Jul 2011; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.01.18706.ebuild, +portage-2.2.01.18890.ebuild:
  Version bump, matches portage-2.2.0_alpha43

  17 Jun 2011; Michael Haubenwallner <haubi@gentoo.org>
  portage-2.2.01.18826.ebuild,
  +files/portage-2.2.01.18826-aix-preservelibs.patch:
  fix the preserve-libs feature for AIX once more

*portage-2.2.01.18826 (14 Jun 2011)

  14 Jun 2011; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.00.15842-r1.ebuild, -portage-2.2.01.15553.ebuild,
  +portage-2.2.01.18826.ebuild:
  Version bump, matches portage-2.2.0_alpha40

*portage-2.2.01.18761 (07 Jun 2011)

  07 Jun 2011; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.01.18252.ebuild, +portage-2.2.01.18761.ebuild:
  Version bump, matches portage-2.2.0_alpha38

*portage-2.2.01.18706 (29 May 2011)

  29 May 2011; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.01.18703.ebuild, +portage-2.2.01.18706.ebuild:
  Fix for find error with e.g. virtual packages, bug #368839, changed fowners
  not to operate in Prefix for non-privileged users

*portage-2.2.01.18703 (28 May 2011)

  28 May 2011; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.01.18213.ebuild, +portage-2.2.01.18703.ebuild:
  Version bump, matches portage-2.2.0_alpha37

*portage-2.2.01.18252 (17 Apr 2011)

  17 Apr 2011; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.01.18125.ebuild, +portage-2.2.01.18252.ebuild: