@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
 
+*portage-2.2.01.19011 (26 Jul 2011)
+
+  26 Jul 2011; Fabian Groffen <grobian@gentoo.org>
+  -portage-2.2.01.18826.ebuild, +portage-2.2.01.19011.ebuild:
+  Version bump, matches portage-2.2.0_alpha47+
+
 *portage-2.2.01.18980 (17 Jul 2011)
 
   17 Jul 2011; Fabian Groffen <grobian@gentoo.org>
